--- a/css/styles.css
+++ b/css/styles.css
@@ -135,6 +135,7 @@ padding: 16px 32px;
 margin: 48px auto 0;
 display: block;
 border: none;
+border-radius: 4px;
 
  }
  .section-button:hover{
@@ -192,7 +193,6 @@ padding: 0;
 border-radius: 4px;
  }
  .section-img :hover{
-   border: 1px solid #4D5AE5;
    border-radius: 4px;
  }
  .section-item{
@@ -252,6 +252,9 @@ margin-bottom: 72px;
     padding-top: 120px;
     padding-bottom: 120px;
  }
+ .section-four-photo{
+   display: block;
+ }
 
  .photo-team{
     display: block;
@@ -296,6 +299,9 @@ text-align: center;
  .photo-color{
     padding: 32px 16px;
     background: var(--white-color);
+    display: block;
+
+
  }
  .team-soc-list{
    display: flex;
@@ -349,6 +355,9 @@ background:  var(--gray-color);
 padding-top: 100px;
 padding-bottom: 100px;
  }
+ .footer{
+   display: flex;
+ }
 
  .footer-logo{
     margin-bottom: 16px;
@@ -375,6 +384,42 @@ color: var(--bage-color);
 width: 264px;
 margin: 0;
  }
+ .footer-soc-media{
+   margin-left: 120px;
+ }
+ .social{
+   font-weight: 600;
+   font-size: 16px;
+   line-height: 24px;
+   margin: 0;
+    margin-bottom: 16px;
+    color: var(--white-color);
+ }
+ .footer-soc-item{
+   display: flex;
+   padding: 0;
+   margin: 0;
+ }
+ .footer-soc-link{
+   width: 40px;
+    height: 40px;
+    display: flex;
+    border-radius: 50%;
+    background: rgba(255, 255, 255, 0.1);
+ }
+ .footer-soc-list{
+   width: 24px;
+    height: 24px;
+   display: flex;
+ }
+ .footer-link{
+margin: 0;
+margin-right: 16px;
+ }
+ .footer-link :last-child{
+   margin: 0;
+ }
+
 
  /*PORTFOLIO*/
 
@@ -405,7 +450,10 @@ margin: 0;
  .portfolio-img{
     display: block;
  }
- .section-portfolio-photo
+ .section-portfolio-photo :hover{
+   border: 0.5px solid #F4F4FD;
+box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
+ }
   
 
  .portfolio-text{
