--- a/css/styles.css
+++ b/css/styles.css
@@ -404,6 +404,7 @@ margin: 0;
    width: 40px;
     height: 40px;
     display: flex;
+    padding: 8px;
     border-radius: 50%;
     background: rgba(255, 255, 255, 0.1);
  }
