--- a/css/styles.css
+++ b/css/styles.css
@@ -408,6 +408,9 @@ margin: 0;
     border-radius: 50%;
     background: rgba(255, 255, 255, 0.1);
  }
+ .footer-link :hover{
+   background: #31D0AA;
+ }
  .footer-soc-list{
    width: 24px;
     height: 24px;
