--- a/css/styles.css
+++ b/css/styles.css
@@ -107,11 +107,10 @@ line-height: calc(24 / 16)
 /*HERO*/
 .section{
    background:var(--gray-color);
-background-image:url(../img/background/header-people-office.jpg);
+background-image:linear-gradient(rgba(46,47,66,0.7),rgba(46, 47, 66, 0.7)),url(../img/background/header-people-office.jpg);
 background-size: cover;
 padding-top: 192px;
 padding-bottom: 192px
-background-image: linear-gradient(rgba(46,47,66,0.7),rgba(46, 47, 66, 0.7)), url(../img/background/header-people-office.jpg);
 
 }
 
@@ -310,22 +309,25 @@ text-align: center;
    margin: 0 auto;
  }
  .team-soc-item{
+   width: 40px;
+   height: 40px;
 margin-right: 24px;
  }
  .team-soc-item :last-child{
 margin-right: 0;
  }
  .team-icons-link{
-   width: 40px;
-   height: 40px;
+   width: 100%;
+   height: 100%;
    display: flex;
+   align-items: center;
+   justify-content: center;
    border-radius: 50%;
    background-color: #4D5AE5;
  }
  .team-link{
    width: 16px;
    height: 16px;
-margin: 30% 30% 30% 30%;
  }
  .team-icons-link.instagram{
    background-image: url(../img/icons-team.svg#icon-instagram);
@@ -334,19 +336,62 @@ margin: 30% 30% 30% 30%;
 
 /*CUSTOMERS*/
 .customers{
+   margin: 0;
    padding-top: 120px;
    padding-bottom: 120px;
-   margin: 0;
+}
+.customers-text{
+text-align: center;
+font-weight: 700;
+font-size: 36px;
+line-height: 42px;
+margin-bottom: 72px;
 }
 
 .customers-list{
    display: flex;
+  margin: 0;
+  padding: 0;
+  justify-content: center;
+}
+.customers-list :hover{
+   border: 1px solid #4D5AE5;
+   border-radius: 4px;
 }
 .customers-item{ 
    border: 1px solid #8E8F99;
    width: 168px;
-   height: 88px; 
+   height: 88px;
+   margin-right: 24px; 
+border-radius: 4px;
 }
+.customers-item :last-child{
+   margin-right: 0;
+}
+.customers-item :hover{
+}
+.customers-link{
+   display: block;
+width: 104px;
+height: 56px;
+margin: 16px 32px;
+
+}
+.customers-link{
+
+}
+.customers-link :hover{
+
+}
+.customers-color{
+
+}
+.customers-color:hover{
+background-color: #404BBF;
+border: 1px solid #4D5AE5;
+border-radius: 4px;
+}
+
 
 
 /*FOOTER*/
@@ -402,9 +447,11 @@ margin: 0;
    margin: 0;
  }
  .footer-soc-link{
-   width: 40px;
-    height: 40px;
-    display: flex;
+   width: 100%;
+   height: 100%;
+   display: flex;
+   align-items: center;
+   justify-content: center;
     padding: 8px;
     border-radius: 50%;
     background: rgba(255, 255, 255, 0.1);
@@ -418,6 +465,8 @@ margin: 0;
    display: flex;
  }
  .footer-link{
+   width: 40px;
+   height: 40px;
 margin: 0;
 margin-right: 16px;
  }
@@ -439,6 +488,7 @@ margin-right: 16px;
     margin: 0;
     gap: 48px 24px; 
  }
+ 
  .portfolio-btn{
     display: flex;
     margin-bottom:72px;
@@ -459,8 +509,9 @@ margin-right: 16px;
    border: 0.5px solid #F4F4FD;
 box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
  }
-  
-
+.link :hover{
+   
+}
  .portfolio-text{
     padding: 32px 16px;
     border: 0.5px solid #F4F4FD;
@@ -478,6 +529,8 @@ line-height:calc(24 / 16);
 padding: 8px 16px;
     display: block;
     border: none;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+border-radius: 4px;
  }
  .btn:focus{
 color: var(--white-color);
