--- a/css/styles.css
+++ b/css/styles.css
@@ -514,6 +514,7 @@ margin-right: 16px;
  }
  .portfolio-link{
    display: block;
+   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
  }
  
 .portfolio-link :hover{
